--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "polandballworld",
+  "name": "solid_error_demo",
   "scripts": {
     "dev": "vinxi dev",
     "build": "vinxi build",
@@ -10,28 +10,17 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.4.1",
-    "@paypal/checkout-server-sdk": "^1.0.3",
-    "@prisma/client": "^5.16.2",
-    "@solid-mediakit/auth": "^2.0.12",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.13.6",
     "@solidjs/start": "^1.0.4",
-    "@thisbeyond/solid-select": "^0.15.0",
-    "country-flag-emoji-polyfill": "^0.1.8",
-    "mapbox-gl": "^3.5.1",
-    "potrace": "^2.1.8",
     "solid-js": "^1.8.18",
     "vinxi": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.8",
-    "@types/mapbox-gl": "^3.1.0",
     "@types/node": "^20.14.10",
-    "@types/potrace": "^2.1.5",
     "esbuild": "^0.23.0",
     "postcss": "^8.4.39",
-    "prisma": "^5.16.2",
     "typescript": "^5.5.3",
     "vite": "^5.3.3"
   }
